@@ -47,11 +47,6 @@ trait SlickFormatterTrait {
     // Modifies settings post building elements.
     $this->formatter()->postBuildElements($build, $entities, $entity);
 
-    // Supports Blazy multi-breakpoint images if provided.
-    // @todo move it into ::build() as moved to base class.
-    if (isset($build['items'][0]) && !empty($settings['check_blazy'])) {
-      $this->formatter()->isBlazy($build['settings'], $build['items'][0]);
-    }
     // If using 0, or directly passed like D8, taken over by theme_field().
     $element = $this->manager()->build($build);
     return $element;
