@@ -298,10 +298,6 @@ class SlickManager extends BlazyManagerBase implements SlickManagerInterface {
     $build = $element['#build'];
     unset($element['#build']);
 
-    if (empty($build['items'])) {
-      return [];
-    }
-
     $settings = $build['settings'];
     $settings += SlickDefault::htmlSettings();
 
@@ -487,10 +483,6 @@ class SlickManager extends BlazyManagerBase implements SlickManagerInterface {
     $build = $element['#build'];
     unset($element['#build']);
 
-    if (empty($build['items'])) {
-      return [];
-    }
-
     // One slick_theme() to serve multiple displays: main, overlay, thumbnail.
     $settings = array_merge(SlickDefault::htmlSettings(), $build['settings']);
     $id       = $settings['id'] ?: Blazy::getHtmlId('slick');
@@ -584,7 +576,6 @@ class SlickManager extends BlazyManagerBase implements SlickManagerInterface {
 
     // Collect the slick instances.
     $element['#items'] = $slick;
-
     unset($build);
     return $element;
   }
